# d2-sync-report

./: .gitignore  README.md  pyproject.toml  requirements.txt  suggestions.json
d2_sync_report/: cli.py
d2_sync_report/data/: dhis2_api.py
d2_sync_report/data/repositories/: d2_job_reducers.py  d2_logs_parser.py  d2_logs_suggestions.py  docker_sync_temporal_folder.py  file_cache.py  message_d2_repository.py  metadata_versioning_d2_repository.py  scheduled_sync_report_d2_repository.py  sync_job_report_d2_repository.py  sync_job_report_execution_file_repository.py  user_d2_repository.py
d2_sync_report/data/repositories/d2_logs_parser/: d2_job_reducers.py  d2_logs_parser.py  import_summaries.py  job_reducer_types.py
d2_sync_report/data/repositories/resources/: delete-tracker-note.sql  suggestions.json
d2_sync_report/domain/entities/: instance.py  message.py  metadata_versioning.py  scheduled_sync_report.py  sync_job_report.py  sync_job_report_execution.py  user.py
d2_sync_report/domain/repositories/: message_repository.py  metadata_versioning_repository.py  scheduled_sync_report_repository.py  sync_job_report_execution_repository.py  sync_job_report_repository.py  user_repository.py
d2_sync_report/domain/usecases/: send_sync_report_usecase.py
d2_sync_report/utils/: uniq.py
tests/data/: d2_api_mock.py  request_mocks.py  test_d2_logs_parser.py  test_scheduled_sync_report_d2_repository.py  test_sync_job_report_d2_repository.py
