[project]
name = "d2-sync-report"
version = "0.1.0"
description = "A DHIS2 sync status reporter CLI"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pydantic",
  "requests",
  "tyro",
]

[project.optional-dependencies]
dev = [
  "black",
  "pylint",
  "mypy",
  "pytest"
]

[project.scripts]
d2-sync-report = "d2_sync_report.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.envs.default.scripts]
cli = "python -m d2_sync_report.cli {args}"
test = "pytest {args}"
lint = "black d2_sync_report tests {args}"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.pytest.ini_options]
pythonpath = ["."]
